# ocp-benchmark-mcp

./: API_USAGE.md  EXTENSION_GUIDE.md  README.md  ocp_benchmark_command.sh  ocp_benchmark_mcp_agent.py  ocp_benchmark_mcp_api.py  ocp_benchmark_mcp_client_chat.py  ocp_benchmark_mcp_client_chat_origin.py  ocp_benchmark_mcp_server.py  pyproject.toml  requirements.txt
analysis/: ocp_benchmark_performance_analysis.py  ocp_benchmark_performance_anlysis.py
config/: baseline.properties  metrics.yml  ocp_benchmark_config.py
elt/: ocp_benchmark_elt.py  ocp_benchmark_elt_extract_api_request_latency.py  ocp_benchmark_elt_extract_api_request_rate.py  ocp_benchmark_elt_extract_disk_io.py  ocp_benchmark_elt_extract_etcd_latency.py  ocp_benchmark_elt_extract_network.py  ocp_benchmark_elt_extract_node_info.py  ocp_benchmark_elt_extract_nodes_usage.py  ocp_benchmark_elt_extract_pods_usage.py  ocp_benchmark_elt_reduce_json_level copy.py  ocp_benchmark_elt_reduce_json_level.py  ocp_benchmark_extract_json.py  ocp_benchmark_json2table.py
html/: ocp_benchmark_mcp_llm.html
ocauth/: ocp_benchmark_auth.py
tools/: ocp_benchmark_es.py  ocp_benchmark_openshift_clusterinfo.py  ocp_benchmark_openshift_nodeinfo.py  ocp_benchmark_prometheus_apilatency.py  ocp_benchmark_prometheus_basequery.py  ocp_benchmark_prometheus_diskio.py  ocp_benchmark_prometheus_network.py  ocp_benchmark_prometheus_nodes_usage.py  ocp_benchmark_prometheus_pods_usage.py  ocp_benchmark_website.py
