[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-benchmark-mcp"
version = "1.0.0"
description = "OpenShift Benchmark MCP Server for Prometheus monitoring and analysis"
authors = [
    {name = "OpenShift Benchmark Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=1.12.4",
    "fastapi>=0.115.7",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "kubernetes>=28.1.0",
    "prometheus-client>=0.18.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "asyncio>=3.4.3",
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/example/ocp-benchmark-mcp"
Repository = "https://github.com/example/ocp-benchmark-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocp_benchmark_mcp*", "ocauth*", "tools*", "config*", "analysis*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true